--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.4.10",
+    "eslint": "^8.47.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "typescript": "^5.1.6"
   }
 }
