chore: add lint script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src --ext .ts --fix",
     "test": "vitest run src/use-cases",
     "test:watch": "vitest src/use-cases"
   },
