--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run src/use-cases",
-    "test:watch": "vitest src/use-cases"
+    "test:watch": "vitest src/use-cases",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,8 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^20.4.10",
+    "@vitest/coverage-v8": "^0.34.2",
+    "@vitest/ui": "^0.34.2",
     "eslint": "^8.47.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "typescript": "^5.1.6",
