--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:dev": "tsx watch src/server.ts",
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run src/use-cases",
     "test:watch": "vitest src/use-cases",
@@ -21,12 +22,16 @@
     "@vitest/ui": "^0.34.2",
     "eslint": "^8.47.0",
     "eslint-plugin-import-helpers": "^1.3.1",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "mongoose": "^7.4.3"
+    "dotenv": "^16.3.1",
+    "fastify": "^4.21.0",
+    "mongoose": "^7.4.3",
+    "zod": "^3.22.2"
   }
 }
