--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vitest": "^0.34.2"
   },
   "dependencies": {
+    "@fastify/jwt": "^7.2.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
