--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run src/use-cases",
     "test:watch": "vitest src/use-cases",
+    "test:create-vitest-environment-mongo": "npm link ./test/vitest-environment-mongo",
+    "test:install-vitest-environment-mongo": "npm link vitest-environment-mongo",
+    "pretest:e2e": "run-s test:create-vitest-environment-mongo test:install-vitest-environment-mongo",
+    "test:e2e": "vitest run src/http",
+    "test:e2e:watch": "vitest src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -22,6 +27,7 @@
     "@vitest/ui": "^0.34.2",
     "eslint": "^8.47.0",
     "eslint-plugin-import-helpers": "^1.3.1",
+    "npm-run-all": "^4.1.5",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
