--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^20.4.10",
+    "@types/supertest": "^2.0.12",
     "@vitest/coverage-v8": "^0.34.2",
     "@vitest/ui": "^0.34.2",
     "eslint": "^8.47.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "npm-run-all": "^4.1.5",
+    "supertest": "^6.3.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
