--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node build/server.js",
     "start:dev": "tsx watch src/server.ts",
+    "build": "tsup src --out-dir build",
     "lint": "eslint src --ext .ts --fix",
     "test": "vitest run src/use-cases",
     "test:watch": "vitest src/use-cases",
@@ -30,6 +32,7 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "supertest": "^6.3.3",
+    "tsup": "^7.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vite-tsconfig-paths": "^4.2.0",
