chore: add redis service to compose.yml

--- a/compose.yml
+++ b/compose.yml
@@ -4,3 +4,8 @@ services:
     image: mongo
     ports:
       - 27017:27017
+  redis:
+    container_name: todo-list-redis
+    image: redis:alpine
+    ports:
+      - 6379:6379
