--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/bull": "^4.10.0",
     "@types/node": "^20.4.10",
+    "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.12",
     "@vitest/coverage-v8": "^0.34.2",
     "@vitest/ui": "^0.34.2",
@@ -43,9 +45,11 @@
     "@fastify/cookie": "^9.0.4",
     "@fastify/jwt": "^7.2.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.11.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
     "mongoose": "^7.4.3",
+    "nodemailer": "^6.9.4",
     "zod": "^3.22.2"
   }
 }
