--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "skipLibCheck": true,
     "baseUrl": "./",
+    "strictPropertyInitialization": false,
     "paths": {
       "@/*": ["./src/*"]
     }
